--- a/vite-project/styles/design.css
+++ b/vite-project/styles/design.css
@@ -3,8 +3,8 @@ body{
     background-color: var(--primary);
 }
 .light{
-    --primary:blue
+    --primary:purple 
 }
 .dark{
-    --primary:red
+    --primary:magenta
 }
