--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--primary);
 }
 
 h1 {
@@ -93,4 +94,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.light{
+  --primary:darkseagreen
+}
+.dark{
+  --primary:magenta
 }
