--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -93,6 +93,7 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+    
   }
 }
 
@@ -101,4 +102,7 @@ button:focus-visible {
 }
 .dark{
   --primary:magenta
+}
+.imgs{
+width: 200px;
 }
