--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -74,6 +74,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  flex-wrap: wrap;
 }
 button:hover {
   border-color: #646cff;
@@ -105,4 +106,5 @@ button:focus-visible {
 }
 .imgs{
 width: 200px;
+flex-wrap: wrap;
 }
